<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBG"
        style="@style/iv_bg_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/login_et_login_padding">

        <ImageView
            android:id="@+id/ivClose"
            style="@style/iv_close" />

        <ImageView
            android:id="@+id/ivAdminLogin"
            android:layout_width="@dimen/landing_iv_logo_size_height"
            android:layout_height="@dimen/landing_iv_logo_size_height"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/login_et_login_padding"
            android:src="@drawable/login_logo" />

        <EditText
            android:id="@+id/etFullName"
            style="@style/et_login_details"
            android:hint="@string/txt_fullname"/>

        <EditText
            android:id="@+id/etEmail"
            style="@style/et_login_details"
            android:inputType="textEmailAddress"
            android:hint="@string/txt_email"/>

        <EditText
            android:visibility="gone"
            android:id="@+id/etPhone"
            style="@style/et_login_details"
            android:inputType="number"
            android:hint="@string/txt_phone"/>

        <EditText
            android:id="@+id/etPassword"
            style="@style/et_login_details"
            android:inputType="textPassword"
            android:hint="@string/txt_password"/>

        <EditText
            android:id="@+id/etRePassword"
            style="@style/et_login_details"
            android:inputType="textPassword"
            android:hint="@string/txt_repassword"/>

        <Button
            android:id="@+id/btnSignup"
            style="@style/btn_login"
            android:text="@string/txt_sign_up"/>

    </LinearLayout>

</RelativeLayout>