<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlMain"
    android:orientation="vertical"
    android:background="@color/colorbg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/action_bar_bg"
        app:popupTheme="@style/AppTheme.PopupOverlay" >

        <TextView
            android:id="@+id/tvTitle"
            style="@style/tv_header_title"
            android:text="@string/txt_change_password"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/setting_ic_arrow_size_width">

        <EditText
            android:id="@+id/etCurrentPassword"
            style="@style/et_add_business"
            android:background="@drawable/bg_white_rounded_5"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_marginBottom="@dimen/setting_ic_arrow_size_height"
            android:hint="@string/txt_current_pass"/>

        <EditText
            android:id="@+id/etNewPassword"
            style="@style/et_add_business"
            android:background="@drawable/bg_white_rounded_5"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_marginBottom="@dimen/setting_ic_arrow_size_height"
            android:hint="@string/txt_new_pass"/>

        <EditText
            android:id="@+id/etReNewPassword"
            style="@style/et_add_business"
            android:background="@drawable/bg_white_rounded_5"
            android:inputType="textPassword"
            android:gravity="center"
            android:layout_marginBottom="@dimen/setting_ic_arrow_size_height"
            android:hint="@string/txt_retype_new_pass"/>

        <Button
            android:id="@+id/btnChangePass"
            style="@style/btn_login"
            android:text="@string/txt_change_password"/>

    </LinearLayout>

</LinearLayout>