<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/action_bar_bg"
        app:popupTheme="@style/AppTheme.PopupOverlay">


        <TextView
            android:id="@+id/tvBack"
            style="@style/tv_header_title"
            android:text="" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/tv_header_title"
            android:gravity="center"
            android:text="@string/txt_booking" />

    </RelativeLayout>
it
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:paddingRight="0dp"
        android:paddingTop="0dp"
        android:visibility="visible">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvBooking"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <com.barodacoder.pilor.custom.EmptyLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <View style="@style/separator_horizontal_gray" />


            <LinearLayout
                android:id="@+id/llOrder"
                style="@style/rl_setting_view"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_et_login_padding">

                <TextView
                    android:id="@+id/tvOrderTitle"
                    style="@style/tv_setting"
                    android:text="@string/txt_order"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvOrderDetail"
                    style="@style/tv_setting"
                    android:layout_below="@+id/tvOrderTitle"
                    android:singleLine="false"
                    android:text="@string/txt_order_detail"
                    android:textSize="@dimen/login_tv_forgot_font" />

            </LinearLayout>

            <View
                android:id="@+id/viewChangePass"
                style="@style/separator_horizontal_gray" />


            <LinearLayout
                android:id="@+id/llReminder"
                style="@style/rl_setting_view"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_et_login_padding">

                <TextView
                    android:id="@+id/tvReminderTitle"
                    style="@style/tv_setting"
                    android:text="@string/txt_reminder"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvReminderDetail"
                    style="@style/tv_setting"
                    android:layout_below="@+id/tvOrderTitle"
                    android:singleLine="false"
                    android:text="@string/txt_reminder_detail"
                    android:textSize="@dimen/login_tv_forgot_font" />

            </LinearLayout>

            <View style="@style/separator_horizontal_gray" />

            <LinearLayout
                android:id="@+id/llRate"
                style="@style/rl_setting_view"
                android:orientation="vertical"
                android:paddingLeft="@dimen/login_et_login_padding">

                <TextView
                    android:id="@+id/tvRateTitle"
                    style="@style/tv_setting"
                    android:text="@string/txt_rate"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:id="@+id/tvRateDetail"
                        style="@style/tv_setting"
                        android:layout_width="0dp"
                        android:layout_weight="2.5"
                        android:singleLine="false"
                        android:text="@string/txt_rate_detail"
                        android:textSize="@dimen/login_tv_forgot_font" />

                    <TextView
                        android:id="@+id/tvReview"
                        style="@style/tv_setting"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/txt_review"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>
            </LinearLayout>

            <View style="@style/separator_horizontal_gray" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>