<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlMain"
    android:orientation="vertical"
    android:background="#ebebeb"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/action_bar_bg"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/tvTitle"
            style="@style/tv_header_title"
            android:text="@string/txt_your_profile" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/landing_iv_logo_size_width"
                android:orientation="vertical"
                android:gravity="center">

                <com.github.siyamed.shapeimageview.CircularImageView
                    android:id="@+id/ivImage"
                    android:layout_width="@dimen/login_iv_logo_size_width"
                    android:layout_height="@dimen/login_iv_logo_size_width"
                    android:src="@drawable/icon_no_image"
                    app:siBorderWidth="1dp"
                    app:siBorderColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tvAddPhoto"
                    style="@style/tv_forgot_pass"
                    android:padding="0dp"
                    android:layout_marginTop="@dimen/setting_layout_view_padding_top"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/txt_add_photo" />

            </LinearLayout>


            <EditText
                android:id="@+id/etFullName"
                style="@style/et_add_business"
                android:hint="@string/txt_fullname" />

            <EditText
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:id="@+id/etEmail"
                style="@style/et_add_business"
                android:inputType="textEmailAddress"
                android:hint="@string/txt_email" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>